# advent-of-code-2023

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run  test
cmake/: AddTask.cmake  AddTestModule.cmake
day01/src/: Task.cpp
day03/include/: Task.hpp
day03/src/: Task.cpp
day04/: CMakeLists.txt
day06/src/: Part1.cpp  Task.cpp
day07/src/: Task.cpp
day08/src/: Task.cpp
day1/include/: Task.hpp
day10/src/: Task.cpp
day11/src/: Task.cpp
day12/include/: Task.hpp
day12/src/: Task.cpp
day2/include/: Task.hpp
day2/src/: Part2.cpp  Task.cpp
day4/src/: Task.cpp
day5/src/: Task.cpp
day8/src/: Task.cpp
day9/src/: Task.cpp
template/: CMakeLists.txt
template/include/: Task.hpp
template/src/: Task.cpp
utility/: CMakeLists.txt
utility/include/utility/: Arguments.hpp  Dbg.hpp  Stream.hpp
utility/src/: Arguments.cpp  Dbg.cpp  Stream.cpp
